<resources>
    <string name="app_name">MyBook</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_detail">Detail</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="about_me">About me</string>
    <string name="favourite_book">Favourite Book</string>
    <string name="list_book">List Book</string>
</resources>