<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/almond"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/book_detail"/>

    </LinearLayout>
</LinearLayout>