<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailBookActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/almond" />

            <TextView
                android:id="@+id/tv_head_title"
                style="@style/tv_head_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/tv_detail_title"
                style="@style/tv_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_head_title"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/tv_head_author"
                style="@style/tv_head_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_detail_title"
                android:text="@string/author"/>
            <TextView
                android:id="@+id/tv_detail_author"
                style="@style/tv_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_head_author"
                android:text="@string/author"/>

            <TextView
                android:id="@+id/tv_head_publisher"
                style="@style/tv_head_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_detail_author"
                android:text="@string/publisher"/>
            <TextView
                android:id="@+id/tv_detail_publisher"
                style="@style/tv_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_head_publisher"
                android:text="@string/publisher"/>

            <TextView
                android:id="@+id/tv_head_release"
                style="@style/tv_head_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_detail_publisher"
                android:text="@string/release_date"/>
            <TextView
                android:id="@+id/tv_detail_release"
                style="@style/tv_description"
                android:layout_toRightOf="@+id/img_detail_photo"
                android:layout_toEndOf="@+id/img_detail_photo"
                android:layout_below="@id/tv_head_release"
                android:text="@string/release_date"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Favorite"/>
        <TextView
            style="@style/tv_head_description"
            android:layout_marginStart="4dp"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/tv_detail_detail"
            style="@style/tv_description"
            android:layout_marginStart="4dp"
            android:text="@string/description"
            android:justificationMode="inter_word"/>
    </LinearLayout>
</ScrollView>